--- a/index.html
+++ b/index.html
@@ -6009,7 +6009,7 @@ aria-label="auto"data-ca-label="auto">
 <!--HO DIV1, all'interno ho due bottoni e DIV2, come faccio a mettere i due bottoni
 centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
 <h2 class="cta-grid__copy-item text-large" >Pubblicazioni</h2>
-<p class="cta-grid__copy-item text-normal" style="margin-bottom:3%">Vedi uno dei miei articoli</p>
+<p class="cta-grid__copy-item text-normal" style="margin-bottom:3%">Leggi i miei articoli</p>
 
   <div class="containerA sc__containerA">
   <div class="c-carouselA sc-latest__carouselA" >
@@ -6056,18 +6056,13 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
       <div class="carousel-item active">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (36).jpg"
+            <img class="card-img-top" src="static/2020/gif/manus_vr.jpg"
               alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title font-weight-bold">ManDri</h4>
-              <p class="text-normal">Un paper sui guanti tecnologici Manus VR, dei guanti ideati per essere utilizzati nella realtà virtuale.
-                Un paper sui guanti tecnologici Manus VR, dei guanti ideati per essere utilizzati nella realtà virtuale.
-                Un paper sui guanti tecnologici Manus VR, dei guanti ideati per essere utilizzati nella realtà virtuale.
-                Un paper sui guanti tecnologici Manus VR, dei guanti ideati per essere utilizzati nella realtà virtuale.
-                Un paper sui guanti tecnologici Manus VR, dei guanti ideati per essere utilizzati nella realtà virtuale.
-                Un paper sui guanti tecnologici Manus VR, dei guanti ideati per essere utilizzati nella realtà virtuale.
+              <p class="text-normal">Un paper pubblicato su IEEE riguardante i Manus VR, dei guanti tecnologici ideati per essere utilizzati nella realtà virtuale.
               </p>
-              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6078,10 +6073,11 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
             <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (34).jpg"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+              <h4 class="card-title font-weight-bold">FindOne</h4>
+              <p class="card-text">
+                L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
+              </p>
+              <a href="" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6092,10 +6088,11 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
             <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+              <h4 class="card-title font-weight-bold">BattleBash</h4>
+              <p class="card-text">
+                La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
+              </p>
+              <a href="" class="btn btn-primary btn-md btn-rounded">Button</a>
             </div>
           </div>
         </div>
@@ -6106,10 +6103,12 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
             <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (29).jpg"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+              <h4 class="card-title font-weight-bold">Titolo</h4>
+              <p class="card-text">
+
+
+              </p>
+              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6120,10 +6119,11 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
             <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (30).jpg"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+              <h4 class="card-title font-weight-bold">Titolo</h4>
+              <p class="card-text">
+
+              </p>
+              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6134,10 +6134,12 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
             <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (27).jpg"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a class="btn btn-primary btn-md btn-rounded">Button</a>
+              <h4 class="card-title font-weight-bold">Titolo</h4>
+              <p class="card-text">
+
+
+              </p>
+              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6179,7 +6181,7 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
           data-classes="is-in-viewport"
           data-add-on-enter>
           <div class="c-blocks">
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/didattica/Plinio2.jpeg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Plinio Seniore" >
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/img/didattica/Plinio2.jpeg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Plinio Seniore" >
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">In primo piano</span>
                   <div class="c-blocks__item-body">
@@ -6188,9 +6190,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/didattica/Plinio1.jpeg" alt="" style=" width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/Plinio1.jpeg" alt="" style=" width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Apple teacher certification">
+              <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Apple teacher certification">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Certificato</span>
@@ -6198,9 +6200,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.png" alt="Apple Teacher" style="height:100%;">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.png" alt="Apple Teacher" style="height:100%;">
               </a>
-              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/gif/virtualReality.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Swip3 by Unit 9">
+              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/img/virtualReality.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Swip3 by Unit 9">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Una grande passione</span>
@@ -6208,9 +6210,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/gif/virtualReality.png" alt="" style="width:100%;">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/virtualReality.png" alt="" style="width:100%;">
               </a>
-              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/certificati/NASA.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Nasa certification">
+              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/certificati/NASA.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Nasa certification">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Certificato</span>
@@ -6218,9 +6220,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/certificati/NASA.jpg" alt="NASA"  style=" height:100%;">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/NASA.jpg" alt="NASA"  style=" height:100%;">
               </a>
-              <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/gif/battlebash.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Embrace your inner Gaming Hero">
+              <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/static/2020/gif/battlebash.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Embrace your inner Gaming Hero">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Un gioco implementato con dedizione e divertimento</span>
@@ -6228,9 +6230,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/gif/battlebash.jpg" alt="" style="height:100%; margin-left:-15%">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/gif/battlebash.jpg" alt="" style="height:100%; margin-left:-15%">
               </a>
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/didattica/titoLivio1.jpeg"target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Gaze Effect">
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg"target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Gaze Effect">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Sono tornato nella mia vecchia scuola media... ma da professore</span>
@@ -6238,9 +6240,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/didattica/titoLivio1.jpeg" alt="" style="width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg" alt="" style="width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden u-from-desktop-is-hidden" href="#"target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Smarter photo albums, without the work">
+              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden u-from-desktop-is-hidden" href="#"  target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Smarter photo albums, without the work">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Bo</span>
@@ -6513,7 +6515,7 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
         </a>
       </li>
       <li>
-        <a href="https://github.com/DOPPIA3MME" rel="nooopener" aria-label="Scoprimi su Github" target="_blank" title="Scoprimi su Github" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="github">
+        <a href="https://github.com/mauriziominieri" rel="nooopener" aria-label="Scoprimi su Github" target="_blank" title="Scoprimi su Github" data-g-event="site-footer-social" data-g-action="clicked" data-g-label="github">
           <svg aria-hidden="true" role="presentation" class="icon icon--svg icon--social icon--github" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
           <!--  <use xlink:href="#ico-github"></use>-->
           <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
