--- a/index.html
+++ b/index.html
@@ -6378,7 +6378,7 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
       <a class="logo-google" href="https://www.google.com/" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
-        <img alt="Google" src="https://www.gstatic.com/images/branding/googlelogo/1x/googlelogo_dark_color_92x30dp.png" srcset="https://www.gstatic.com/images/branding/googlelogo/1x/googlelogo_dark_color_92x30dp.png, https://www.gstatic.com/images/branding/googlelogo/2x/googlelogo_dark_color_92x30dp.png 2x">
+        <img alt="Maurizio Minieri" src="https://www.gstatic.com/images/branding/googlelogo/1x/googlelogo_dark_color_92x30dp.png" srcset="https://www.gstatic.com/images/branding/googlelogo/1x/googlelogo_dark_color_92x30dp.png, https://www.gstatic.com/images/branding/googlelogo/2x/googlelogo_dark_color_92x30dp.png 2x">
       </a>
     </div>
     <ul role="menubar">
