--- a/index.html
+++ b/index.html
@@ -4136,16 +4136,16 @@ data-ca-label="tv">
               <div id="carousel-apps-items-tv-popular">
                 <div class="apps-carousel__item apps-carousel__item--tv">
                   <div class="apps-carousel__item-inner">
-                    <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.ted.android" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="TED">
-                      <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-ted_1x.jpg" srcset="/static/2016/img/apps-carousel/tv-ted_2x.jpg 2x" />
+                    <a class="apps-carousel__item-img-wrap" href="http://www.mauriziominieri.it/static/2020/projects/LMGS - THE FLYING PIG.zip" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="TED">
+                      <img alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/theflyingpig.gif" srcset="http://www.mauriziominieri.it/static/2020/gif/theflyingpig.gif" />
                     </a>
                     <div class="apps-carousel__item-description">
-                      <a class="" href="https://play.google.com/store/apps/details?id=com.ted.android" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="TED">
+                      <a class="" href="http://www.mauriziominieri.it/static/2020/projects/LMGS - THE FLYING PIG.zip" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="TED">
                         <div class="apps-carousel__item-description-icon-link">
-                          <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/ted_1x.png" srcset="/static/2016/img/apps-carousel/icons/ted_2x.png 2x">
+                          <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/ted_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/ted_2x.png 2x">
                         </div>
                         <div class="cta-grid__copy-item apps-carousel__item-description-link">
-                            The flying pig
+                            The Flying Pig
                         </div>
                       </a>
                     </div>
