--- a/didattica.html
+++ b/didattica.html
@@ -421,7 +421,7 @@
 
 
     <div class="vc_empty_space" style="height: 40px"><span class="vc_empty_space_inner"></span></div>
-    
+
 
     <!--
     <label class="tablink" onclick="openPage('Programmazione',this,'#F0EDED'); deleteNavbarItem(1)">PROGRAMMAZIONE</label>
@@ -1324,10 +1324,10 @@
     <div id="Box-download-4" class="mk-box-icon   boxed-style   clearfix">
     <div class="icon-box-boxed top" id="down-box">
     <p  id="down4-title" style="font-family: 'Caveat Brush';">Camtasia</p>
-    <img class="card-img-top"  src="loghi\logo_camtasia.png" alt="Camtasia">
+    <img class="card-img-top"  src="/static/2020/img/icons/icon-camtasia.png" alt="Camtasia">
     <p class="down-descrizione">Camtasia è un software perfetto per creare presentazioni e per l'editing video.</p>
 
-   <a id="down-a" class="hvr-icon-down" href="http://mauriziominieri.it/download/camtasia.exe" target="_blank">
+   <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/camtasia.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
     <!--<div class="row"  style="margin-left:25px;">
     <a id="ak" class="hvr-icon-sink-away" style="font-size: 30px; font-family:'Caveat Brush';"
