--- a/didattica.html
+++ b/didattica.html
@@ -1347,11 +1347,11 @@
     <div id="Box-download-5" class="mk-box-icon   boxed-style   clearfix">
     <div class="icon-box-boxed top" id="down-box">
     <p  id="down5-title" style="font-family: 'Caveat Brush';">Scratch</p>
-    <img  style=""   class="card-img-top" src="loghi/logo_scratch.png">
+    <img  style=""   class="card-img-top" src="/static/2020/img/icons/icon-scratch.png">
     <p class="down-descrizione">Scratch è un software molto intuitivo. Perfetto per allenarsi con la programmazione.</p>
     <a id="down-a" class="hvr-icon-forward" href="https://scratch.mit.edu/projects/editor/?tutorial=getStarted" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 20px; "></i>Inizia online</a>
-    <a id="down-a" class="hvr-icon-down" href="http://mauriziominieri.it/download/Scratch Desktop Setup 3.1.2.1.exe" target="_blank">
+    <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/Scratch Desktop Setup 3.1.2.1.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
 
 
@@ -1366,13 +1366,13 @@
     <div id="Box-download-6" class="mk-box-icon   boxed-style   clearfix">
     <div class="icon-box-boxed top" id="down-box">
     <p  id="down6-title" style="font-family: 'Caveat Brush';">Balsamiq</p>
-    <img class="card-img-top"  src="loghi\logo_balsamiq.png" alt="Camtasia">
+    <img class="card-img-top"  src="/static/2020/img/icons/icon-balsamiq.png" alt="Balsamiq">
     <p class="down-descrizione">Balsamiq è un software perfetto per creare mockup di applicazioni.</p>
 
-    <a id="down-a" class="hvr-icon-down" href="http://mauriziominieri.it/download/Balsamiq_Mockups_3.5.17.exe" target="_blank">
+    <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/Balsamiq_Mockups_3.5.17.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
 
-    <a class="hvr-icon-forward" href="http://mauriziominieri.it/download/BalsamiqKey.txt" data-wpel-link="internal" target="_blank" download>
+    <a class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/software/BalsamiqKey.txt" data-wpel-link="internal" target="_blank" download>
     <i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 10px; "></i> </a>
 
     <div class="clearboth"></div>
@@ -1406,7 +1406,7 @@
     <div class="row" style="background-color:#E8ECEF; border: 2px solid;box-shadow: 0.5em 0.5em 0.5em gray; margin-left: 3%; margin-right: 3%; margin-top: 2%;">
     <div id="myfphoto" class="col-lg col-md-12 jumbotron">
     <p id="finalp1-title" class="finalp-title">Useful</p>
-    <img style=" z-index: 2;" id="finalp-photo" src="gif/FTP.png" >
+    <img style=" z-index: 2;" id="finalp-photo" src="/static/2020/gif/FTP.png" >
     </div>
     <div  class="col-lg-7 col-md-12 jumbotron" id="finalp1-info">
     <p style="font-family: 'Delius', cursive; ">
@@ -1415,18 +1415,18 @@
     semplicemente inserendo quelli noti.<br><br>Cliccando su "Scaricalo" sarà possibile far partire il file .exe del programma,
     cioè il file eseguibile, che quindi si potrà testare in tutta la sua completezza ed efficienza.
     </p><br>
-    <a id="finalp-a" class="hvr-icon-down" href="http://mauriziominieri.it/projects/FTP.exe" data-wpel-link="internal" target="_blank">
+    <a id="finalp-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/FTP.exe" data-wpel-link="internal" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 30px; "></i>Scaricalo</a>
 
-    <a  style=" font-size: 2px; " class="hvr-icon-forward" href="http://mauriziominieri.it/projects/FTP.c" data-wpel-link="internal" target="_blank">
+    <a  style=" font-size: 2px; " class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/projects/FTP.c" data-wpel-link="internal" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 10px; "></i></a>
 
     <div class="vc_empty_space" style="height: 30px"><span class="vc_empty_space_inner"></span></div>
-    <p id="infolavoro" >IDE utilizzato:<img src="loghi\logo_codeblock.png" data-toggle="tooltip" data-placement="right" title="CodeBlocks"><br>
+    <p id="infolavoro" >IDE utilizzato:<img src="/static/2020/img/icons/icon-codeblock.png" data-toggle="tooltip" data-placement="right" title="CodeBlocks"><br>
     Linguaggio: <img src="loghi\logo_c.png" data-toggle="tooltip" data-placement="right" title="C"></p>
 
     <br>momentaneo<br>
-     <a id="finalp-a" class="hvr-icon-down" href="http://mauriziominieri.it/projects/webWork.rar" data-wpel-link="internal" target="_blank">
+     <a id="finalp-a" class="hvr-icon-down" href="http://mauriziominieri.it/static/2020/projects/webWork.rar" data-wpel-link="internal" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 30px; "></i>Scarica webWork</a>
 
     </div>
@@ -1455,7 +1455,7 @@
     <div id="Box-download-1" class="mk-box-icon   boxed-style   clearfix">
     <div class="icon-box-boxed top" id="down-box">
     <p id="downEdit1-title" style="font-family: 'Caveat Brush';">Paint</p>
-    <img class="card-img-top"  src="loghi\logo_paint.png"   alt="Paint">
+    <img class="card-img-top"  src="/static/2020/img/icons/icon-paint.png"   alt="Paint">
     <p class="down-descrizione">Paint è un programma molto facile per creare vari disegni, schemi e altro.</p>
 
     <!---target="_blank" apre il link in una nuova finestra-->
@@ -1478,13 +1478,13 @@
     <img class="card-img-top"  src="https://images.sftcdn.net/images/t_optimized,f_auto/p/dd0aaa64-9b53-11e6-a286-00163ed833e7/820737252/filmora-video-editor-820737252.png"   alt="Filmora">
     <p class="down-descrizione">Fimora è un programma molto facile per il montaggio video.</p>
 
-    <a id="down-a" class="hvr-icon-down" href="http://mauriziominieri.it/download/filmora.exe" target="_blank">
+    <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/filmora.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
 
     <a id="down-a" class="hvr-icon-forward" href=" https://www.migliorsoftware.it/video/filmora-la-guida-completa/" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Manuale</a>
 
-    <a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/didattica/06-colore1.pdf" target="_blank">
+    <a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/slides/06-colore1.pdf" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Colore1</a>
     <!--<a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/didattica/06-colore2.pdf" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Colore2</a>-->
