--- a/didattica.html
+++ b/didattica.html
@@ -491,7 +491,7 @@
     <a target="_blank" href="http://mauriziominieri.it/didattica/Software.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 3</a>
     <p class="tooltiptext">Componenti software</p></div>
 
-    <a style="text-align: center; font-size:24px;" id="down-a" class="hvr-icon-forward" href="didattica/HearingTest.mp4" target="_blank"><i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Frequenza del suono</a>
+    <a style="text-align: center; font-size:24px;" id="down-a" class="hvr-icon-forward" href="/static/2020/slides/HearingTest.mp4" target="_blank"><i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Frequenza del suono</a>
     </div>
     </div>
 
@@ -609,7 +609,7 @@
     <p class="tooltiptext">Lezione 7</p></div>
 
     <div class="tooltipS">
-    <a target="_blank" href="didattica/TagHTML.pdf" class="nav-link">Tag HTML</a>
+    <a target="_blank" href="/static/2020/slides/TagHTML.pdf" class="nav-link">Tag HTML</a>
     <p class="tooltiptext">Tutti i tag html</p></div>
 
     <div class="tooltipS">
@@ -640,7 +640,7 @@
     <a target="_blank" href="https://docs.kde.org/trunk5/it/kdeedu/kturtle/kturtle.pdf" class="nav-link">Manuale</a>
     <p class="tooltiptext">Un manuale completo ed efficace</p></div>
     <div class="tooltipS">
-    <a target="_blank" href="didattica/robotica002.pdf" class="nav-link">Giochi robotica</a>
+    <a target="_blank" href="/static/2020/slides/robotica002.pdf" class="nav-link">Giochi robotica</a>
     <p class="tooltiptext">Giochi simpatici</p></div>
 
 
@@ -770,7 +770,7 @@
     <div style="border: 2px solid;box-shadow: 3px 5px gray; " class="carousel-inner">
 
     <div class="item active">
-    <img src="didattica/Plinio1.jpeg" alt="Plinio 1" >
+    <img src="/static/2020/img/didattica/Plinio1.jpeg" alt="Plinio 1" >
     <div class="carousel-caption">
     <h3>Plinio1</h3>
     <p>Grazie, Plinio!</p>
@@ -778,7 +778,7 @@
     </div>
 
     <div class="item">
-    <img src="didattica/Plinio2.jpeg" alt="Plinio 2" style="width:100%;">
+    <img src="/static/2020/img/didattica/Plinio2.jpeg" alt="Plinio 2" style="width:100%;">
     <div class="carousel-caption">
     <h3>Plinio2</h3>
     <p>Thank you, Plinio!</p>
@@ -869,7 +869,7 @@
     <div style="border: 2px solid;box-shadow: 3px 5px gray; " class="carousel-inner">
 
     <div class="item active">
-    <img src="didattica/deCarlo2.jpg" alt="De Carlo 1" style="height:650px; width:100%;">
+    <img src="/static/2020/img/didattica/deCarlo2.jpg" alt="De Carlo 1" style="height:650px; width:100%;">
     <div class="carousel-caption">
     <h3>De Carlo 1</h3>
     <p>Grazie, De Carlo!</p>
@@ -877,7 +877,7 @@
     </div>
 
     <div class="item">
-    <img src="didattica/deCarlo1.jpeg" alt="De Carlo 2" style="height:650px; width:100%;">
+    <img src="/static/2020/img/didattica/deCarlo1.jpeg" alt="De Carlo 2" style="height:650px; width:100%;">
     <div class="carousel-caption">
     <h3>De Carlo 2</h3>
     <p>Thank you, De Carlo!</p>
@@ -885,7 +885,7 @@
     </div>
 
      <div class="item">
-    <img src="didattica/deCarlo3.jpg" alt="De Carlo 3" style="height:650px; width:100%;">
+    <img src="/static/2020/img/didattica/deCarlo3.jpg" alt="De Carlo 3" style="height:650px; width:100%;">
     <div class="carousel-caption">
     <h3>De Carlo 3</h3>
     <p>Danke, De Carlo!</p>
@@ -1126,7 +1126,7 @@
     <div style="border: 2px solid;box-shadow: 3px 5px gray; " class="carousel-inner">
 
     <div class="item active">
-    <img src="didattica/titoLivio1.jpeg" alt="Tito Livio" style="width:100%;">
+    <img src="/static/2020/img/didattica/titoLivio1.jpeg" alt="Tito Livio" style="width:100%;">
     <div class="carousel-caption">
     <h3>Tito Livio</h3>
     <p>Grazie, Tito Livio!</p>
@@ -1134,7 +1134,7 @@
     </div>
 
     <div class="item">
-    <img src="didattica/titoLivio2.jpeg" alt="Tito Livio" style="width:100%;">
+    <img src="/static/2020/img/didattica/titoLivio2.jpeg" alt="Tito Livio" style="width:100%;">
     <div class="carousel-caption">
     <h3>Tito Livio</h3>
     <p>Thank you, Tito Livio!</p>
@@ -1142,7 +1142,7 @@
     </div>
 
     <div class="item">
-    <img src="didattica/titoLivio3.jpeg" alt="Tito Livio" style="width:100%;">
+    <img src="/static/2020/img/didattica/titoLivio3.jpeg" alt="Tito Livio" style="width:100%;">
     <div class="carousel-caption">
     <h3>Tito Livio</h3>
     <p>Danke, Tito Livio!</p>
