--- a/didattica.html
+++ b/didattica.html
@@ -1274,11 +1274,11 @@
     <!---target="_blank" apre il link in una nuova finestra-->
     <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/codeblocks-17.12-setup.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
-    <a  id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/download/PrimiLavoriCodeBlock.pdf" target="_blank">
+    <a  id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/software/PrimiLavoriCodeBlock.pdf" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Guida</a>
-    <a style="font-size:20px;" id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/download/CreareProgetti.mp4" target="_blank">
+    <a style="font-size:20px;" id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/software/CreareProgetti.mp4" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 20px; "></i>CreareProgetti</a>
-    <a style="font-size:20px;" id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/download/AprireProgetti.mp4" target="_blank">
+    <a style="font-size:20px;" id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/software/AprireProgetti.mp4" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 20px; "></i>AprireProgetti</a>
 
     <div class="clearboth"></div>
@@ -1311,7 +1311,7 @@
     <p class="down-descrizione">Flowgorithm è un software molto intuitivo. Perfetto per allenarsi con i diagrammi di flusso.</p>
     <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/Flow64.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
-    <a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/download/Flow64Manual.pdf" target="_blank">
+    <a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/software/Flow64Manual.pdf" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Manuale</a>
     <div class="clearboth"></div>
     </div>
@@ -1331,7 +1331,7 @@
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
     <!--<div class="row"  style="margin-left:25px;">
     <a id="ak" class="hvr-icon-sink-away" style="font-size: 30px; font-family:'Caveat Brush';"
-    href="http://mauriziominieri.it/download/RegInfo.ini" data-wpel-link="internal" target="_blank" download>
+    href="http://mauriziominieri.it/static/2020/software/RegInfo.ini" data-wpel-link="internal" target="_blank" download>
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Activation Key </a>
     <i id="ak2" class="fa fa-chevron-circle-right hvr-icon" style=" font-size: 20px;" data-toggle="tooltip" data-placement="right" title="Sostituisci la key in C:/ProgramData/TechSmith/CamtasiaStudio18"></i>
     </div>-->
@@ -1795,7 +1795,7 @@
     <p class="down-descrizione" style="margin-top:20px;">Thymio Suite è un'interfaccia che, una volta collegato Thymio al computer, ti permette di effettuare operazioni base, come per esempio gestire l'aggiornamento firmware o rinominarlo, ma ti da anche la possibilità di accedere alla schermata di programmazione VPL, Aseba Studio, e addirittura Scratch.</p>
 
     <!---target="_blank" apre il link in una nuova finestra-->
-    <a id="down-a" class="hvr-icon-down" href="http://mauriziominieri.it/download/ThymioSuite.exe" target="_blank">
+    <a id="down-a" class="hvr-icon-down" href="https://github.com/mauriziominieri/mauriziominieri.github.io/releases/download/1.0/ThymioSuite.exe" target="_blank">
     <i class="fa fa-chevron-circle-down hvr-icon" style=" font-size: 20px; "></i>Scaricalo</a>
 
     <div class="clearboth"></div>
