--- a/didattica.html
+++ b/didattica.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Maurizio Minieri</title>
+    <link rel = "icon"
+    href = "http://www.mauriziominieri.it/static/2020/img/icons/logoM.png"
+    type = "image/x-icon">
 
     <style>
     body {font-family: Arial;}
@@ -123,11 +126,7 @@
     <link rel="alternate" type="application/rss+xml" title="" href="https://">
     <link rel="alternate" type="application/rss+xml" title="" href="https://">
 
-    <link rel="shortcut icon" href="http://mauriziominieri.it/loghi/icon_fox.png">
-    <link rel="apple-touch-icon-precomposed" href="http://mauriziominieri.it/loghi/icon_fox.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://mauriziominieri.it/loghi/icon_fox.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://mauriziominieri.it/loghi/icon_fox.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://mauriziominieri.it/loghi/icon_fox.png">
+  
 
 
 
