findone medium added

--- a/index.html
+++ b/index.html
@@ -4372,7 +4372,7 @@ data-ca-label="tv">
     <a href=""
     class="cta cta--is-2"
     aria-label="Scoprili tutti" target="_blank"
-    >Guardali tutti
+    >Scopri i dettagli
     <svg class="icon--svg cta__icon cta__external" aria-hidden="true">
     <use xlink:href="#ico-arrow-large"></use>
     </svg></a>
@@ -5997,17 +5997,10 @@ aria-label="auto"data-ca-label="auto">
 
 
 
-<!--INIZIO MYCAROUSEL OFFICIAL-->
+<!--INIZIO Pubblicazioni-->
 
 <section class="l-section l-section--has-subsection text-center" id="pubblicazioni">
 
-  <!--INIZIO PERSONALE-->
-
-
-<!--fine PERSONALE-->
-
-<!--HO DIV1, all'interno ho due bottoni e DIV2, come faccio a mettere i due bottoni
-centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
 <h2 class="cta-grid__copy-item text-large" >Pubblicazioni</h2>
 <p class="cta-grid__copy-item text-normal" style="margin-bottom:3%">Leggi i miei articoli</p>
 
@@ -6056,10 +6049,10 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
       <div class="carousel-item active">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="static/2020/gif/manus_vr.jpg"
+            <img class="card-img-top" src="/static/2020/gif/myManus.png"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">ManDri</h4>
+              <h3 class="card-title ">ManDri</h3>
               <p class="text-normal">Un paper pubblicato su IEEE riguardante i Manus VR, dei guanti tecnologici ideati per essere utilizzati nella realtà virtuale.
               </p>
               <a href="" class="btn btn-primary btn-md btn-rounded">Leggi</a>
@@ -6070,14 +6063,14 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
       <div class="carousel-item">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (34).jpg"
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/software/FindOne-Medium.jpeg"
               alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title font-weight-bold">FindOne</h4>
+              <h3 class="card-title font-weight-bold">FindOne</h3>
               <p class="card-text">
                 L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
               </p>
-              <a href="" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="http://www.mauriziominieri.it/static/2020/software/FindOne-Medium.pdf" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
