--- a/index.html
+++ b/index.html
@@ -6063,14 +6063,14 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/software/FindOne-Medium.jpeg"
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.jpeg"
               alt="Card image cap">
             <div class="card-body">
               <h3 class="card-title font-weight-bold">FindOne</h3>
               <p class="card-text">
                 L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
               </p>
-              <a href="http://www.mauriziominieri.it/static/2020/software/FindOne-Medium.pdf" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.pdf" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6078,14 +6078,14 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg"
+            <img class="card-img-top" src=""
               alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title font-weight-bold">BattleBash</h4>
               <p class="card-text">
                 La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
               </p>
-              <a href="" class="btn btn-primary btn-md btn-rounded">Button</a>
+              <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" class="btn btn-primary btn-md btn-rounded">Button</a>
             </div>
           </div>
         </div>
